--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-vector-icons": "^9.2.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
